--- a/packages/eightballer/skills/liquidation_station/skill.yaml
+++ b/packages/eightballer/skills/liquidation_station/skill.yaml
@@ -7,13 +7,13 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifjeluqyh7ck3rrs2jfqbe5blt6sc3ti4c6bj4j6dt6smtfngu7qy
-  behaviours.py: bafybeigbqvrc324nq427ldlipumkzdcfyyajn7thmppnmbujup2h7m23iq
+  behaviours.py: bafybeial67ystmpgc2zadut3bogxrkytdb5iaev67dljta4qac7lq43l3m
   dialogues.py: bafybeid7jjpfscvapjsg7hv44voxd4pdy2i3ozcmckwk4phkft7zrpshmm
-  fsm_specification.yaml: bafybeid6vmmyyj2ex76xn34wkjr72gtsojwboop3inor26bk7tq7mdkptm
+  fsm_specification.yaml: bafybeifdm4hgew2jr4y2yrko7ej6yh6ozsspurzmji4urontqckdycbc7m
   handlers.py: bafybeictjhl52fkhcraiijatscswo2m62kk47fdcuwwfc7jwjyjkbgvary
   models.py: bafybeibmabdemdxvb5eneqxwatdkcwagfyorm5re6lpwmquim35kb24i7i
   payloads.py: bafybeigbs724zyxwt7rquufc52wj6xqmk7qobnajbrusxizwnui4gbpgry
-  rounds.py: bafybeiery2ygyj3psogobrhbwbxa56o26r4je4ccwyojzgsdnkdvqvhque
+  rounds.py: bafybeialx7jkxyomidibygizf5dyntfos4d6p3kmiih56ic73z4wpelxsm
   tests/__init__.py: bafybeic3534aro4pdtsdcuxywzlgkccczx2elhnwisiq3r6okvnrdu4aia
   tests/test_behaviours.py: bafybeiaw2gehqw4yrv2syfllvoycfukafwortm7rpqa76fsiqcj6j7nehe
   tests/test_dialogues.py: bafybeiftyhzce2jak7wml4akj4z7ywicbmc7tbs5ajzx3gdr6wen2n6fuu
@@ -125,6 +125,7 @@ models:
       tendermint_p2p_url: localhost:26656
       tendermint_url: http://localhost:26657
       tx_timeout: 10.0
+      use_termination: true
       validate_timeout: 1205
     class_name: Params
   requests:
