--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@mantine/core": "^6.0.7",
+    "@mantine/ds": "^6.0.7",
+    "@mantine/hooks": "^6.0.7",
+    "@tabler/icons-react": "^2.16.0",
+    "@thirdweb-dev/react": "^3.11.7",
+    "@thirdweb-dev/sdk": "^3.10.10",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "ethers": "^5",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
