--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,26 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-/.pnp
-.pnp.js
+frontend/node_modules
+frontend/.pnp
+frontend/.pnp.js
 
-# testing
-/coverage
+frontend/coverage
 
-# next.js
-/.next/
-/out/
+frontend/.next/
+frontend/out/
 
-# production
-/build
+frontend/.DS_Store
+frontend/*.pem
 
-# misc
-.DS_Store
-*.pem
+frontend/npm-debug.log*
+frontend/yarn-debug.log*
+frontend/yarn-error.log*
 
-# debug
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+frontend/# local env files
+frontend/.env*.local
 
-# local env files
-.env*.local
+frontend/.vercel
 
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
+frontend/*.tsbuildinfo
+frontend/next-env.d.ts
