--- a/packages/zarathustra/contracts/unitroller/contract.yaml
+++ b/packages/zarathustra/contracts/unitroller/contract.yaml
@@ -9,7 +9,9 @@ fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
   contract.py: bafybeih6j5ixudc7d6sbervwct4wwioyq7mcbwkdocpk4mr6annq3thvum
 fingerprint_ignore_patterns: []
-class_name: MyScaffoldContract
-contract_interface_paths: {}
+class_name: Unitroller
+contract_interface_paths: {
+  ethereum: build/unitroller.json
+}
 dependencies: {}
 contracts: []
