--- a/packages/zarathustra/contracts/jump_interest_model/contract.yaml
+++ b/packages/zarathustra/contracts/jump_interest_model/contract.yaml
@@ -7,6 +7,7 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
+  build/jump_interest_model.json: bafybeic6pmyjkmwb3d2zjbmspfd3dgc22w743bj4ycbsj5ydnhixtl5dmq
   contract.py: bafybeih6j5ixudc7d6sbervwct4wwioyq7mcbwkdocpk4mr6annq3thvum
 fingerprint_ignore_patterns: []
 class_name: MyScaffoldContract
