--- a/packages/zarathustra/contracts/o_matic/contract.yaml
+++ b/packages/zarathustra/contracts/o_matic/contract.yaml
@@ -7,6 +7,7 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
+  build/o_matic.json: bafybeidhbu4k3y475ja4vpy5prh2abjordunljv6cqqy5oeslh2gdgfniy
   contract.py: bafybeih6j5ixudc7d6sbervwct4wwioyq7mcbwkdocpk4mr6annq3thvum
 fingerprint_ignore_patterns: []
 class_name: MyScaffoldContract
