--- a/packages/zarathustra/contracts/oracle/contract.yaml
+++ b/packages/zarathustra/contracts/oracle/contract.yaml
@@ -7,6 +7,7 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
+  build/oracle.json: bafybeiarhpwi3anbe7hdlgjxk7he2kmerabcvgipg4i5gsusnkrf75lkmm
   contract.py: bafybeih6j5ixudc7d6sbervwct4wwioyq7mcbwkdocpk4mr6annq3thvum
 fingerprint_ignore_patterns: []
 class_name: MyScaffoldContract
