--- a/packages/zarathustra/contracts/unitroller/contract.yaml
+++ b/packages/zarathustra/contracts/unitroller/contract.yaml
@@ -7,11 +7,11 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
-  contract.py: bafybeih6j5ixudc7d6sbervwct4wwioyq7mcbwkdocpk4mr6annq3thvum
+  build/unitroller.json: bafybeietncrw5nm7kgzqwg2cxu2wx4lphczhbzurawotpdwssgoj7mzowy
+  contract.py: bafybeibwev2niuewfthuvjjxzzfh3bfkvekezp4yxlg7dtu6ylrraiyxlu
 fingerprint_ignore_patterns: []
 class_name: Unitroller
-contract_interface_paths: {
+contract_interface_paths:
   ethereum: build/unitroller.json
-}
 dependencies: {}
 contracts: []
