[feat] implemented mas script and ensured keys can be passed as args

--- a/packages/eightballer/skills/liquidation_station/skill.yaml
+++ b/packages/eightballer/skills/liquidation_station/skill.yaml
@@ -24,7 +24,8 @@ fingerprint:
 fingerprint_ignore_patterns: []
 connections: []
 contracts: []
-protocols: []
+protocols:
+- valory/ledger_api:1.0.0:bafybeibo4bdtcrxi2suyzldwoetjar6pqfzm6vt5xal22ravkkcvdmtksi
 skills:
 - valory/abstract_round_abci:0.1.0:bafybeiar4gy4brpuxekiwjq7osh3fm254jgdoxlgkvqcp5lytu4uzrmbsm
 behaviours:
@@ -97,12 +98,14 @@ models:
         genesis_time: '2022-05-20T16:00:21.735122717Z'
         voting_power: '10'
       history_check_timeout: 1205
+      infura_api_key: SECRET
       ipfs_domain_name: null
       keeper_allowed_retries: 3
       keeper_timeout: 30.0
       max_attempts: 10
       max_healthcheck: 120
       on_chain_service_id: null
+      polygonscan_api_key: secret
       request_retry_delay: 1.0
       request_timeout: 10.0
       reset_pause_duration: 10
