--- a/packages/eightballer/services/liquidation_station/service.yaml
+++ b/packages/eightballer/services/liquidation_station/service.yaml
@@ -6,7 +6,7 @@ aea_version: '>=1.0.0, <2.0.0'
 license: Apache-2.0
 fingerprint: {}
 fingerprint_ignore_patterns: []
-agent: eightballer/liquidation_station:0.1.0:bafybeiehzkflk5u7fmhbwxsbirmhmy2hek3pfr6yflluhncwz4hdkgjvri
+agent: eightballer/liquidation_station:0.1.0:bafybeifjkzisnd3j7g5nrwvpycc6ba7cuvsoicrnxpgu4ph5kjh27lihky
 number_of_agents: 4
 deployment:
   agent:
@@ -19,3 +19,11 @@ deployment:
         8002: 8000
       3:
         8003: 8000
+---
+public_id: eightballer/liquidation_station:0.1.0
+type: skill
+models:
+  params:
+    args:
+      infura_api_key: ${INFURA_API_KEY:str}
+      polygonscan_api_key: ${POLYGONSCAN_API_KEY:str}
