--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ readme = "README.md"
 python = "^3.10"
 open-autonomy = "^0.10.1"
 docker-compose = "^1.29.2"
+solidity-parser = "^0.1.1"
+black = "22.12.0"
+isort = "==5.11.4"
 
 
 
