--- a/packages/eightballer/connections/websocket_client/connection.yaml
+++ b/packages/eightballer/connections/websocket_client/connection.yaml
@@ -8,7 +8,7 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeibebl36eaaewytw3b75m6k6drk5bldooxf4lhcbcfi4nmyuiwrcny
-  connection.py: bafybeihmjehete5anwzmlcteawo3gwkbzkljrpm63rfzgca2jpuqiinesy
+  connection.py: bafybeiflbcyru7gciunu2mxvegrcu54ru66vhiuhp4n4xedixbwloenyka
   readme.md: bafybeihg5yfzgqvg5ngy7r2o5tfeqnelx2ffxw4po5hmheqjfhumpmxpoq
 fingerprint_ignore_patterns: []
 connections: []
@@ -20,6 +20,8 @@ config:
   target_skill_id: null
 excluded_protocols: []
 restricted_to_protocols: []
-dependencies: {}
+dependencies:
+  websocket_client:
+    version: ==1.5.1
 is_abstract: false
 cert_requests: []
