--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.9"
 open-autonomy = "^0.10.1"
 docker-compose = "^1.29.2"
 rich-click = "^1.6.1"
+autonomy-dev = {path = "../../auto_dev", extras = ["all"]}
 
 
 
