--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ open-autonomy = "^0.10.1"
 docker-compose = "^1.29.2"
 rich-click = "^1.6.1"
 autonomy-dev = {path = "../../auto_dev", extras = ["all"]}
+hypothesis = "^6.75.3"
 
 
 
