--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,8 @@ python = "^3.9"
 open-autonomy = "^0.10.1"
 docker-compose = "^1.29.2"
 rich-click = "^1.6.1"
-autonomy-dev = {path = "../../auto_dev", extras = ["all"]}
 hypothesis = "^6.75.3"
+autonomy-dev = {extras = ["all"], version = "^0.1.3"}
 
 
 
