--- a/packages/zarathustra/contracts/homm_vault/contract.yaml
+++ b/packages/zarathustra/contracts/homm_vault/contract.yaml
@@ -7,10 +7,13 @@ license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
   __init__.py: bafybeifzs22oiwtftrlgrf5ze74x4kk5has2i46x5tpk6o3ivcce6vz44y
-  build/vault.json: bafybeicezxttquzoq2j3vrnjiupwh275gu2wjhwzond2n6cjwrtjf47oyu
-  contract.py: bafybeibaozhftl2yftd2poespc7nghnoo2kjlkxqfqhfrxe4khqezkmxcm
+  build/Vault.json: bafybeidrfek4uq3nn2otf6e3w3sv6dt6fb47nsczk33j4uukk3rlijshga
+  contract.py: bafybeigcrmubzbtuachlv7hzkkwb7p6htwt35wwtysclylhzgqdftczv34
+  tests/__init__.py: bafybeiftu27piztiu5bfxbvhqsbppgtseykyfot6wtlrrzeuzya6zrgpky
+  tests/test_contract.py: bafybeidwygh7w5ttlxkeglcl2no27cfgaeqh6zn7kkjuwf6cnvpft4qwfq
 fingerprint_ignore_patterns: []
-class_name: MyScaffoldContract
-contract_interface_paths: {}
+class_name: HOMMVaultContract
+contract_interface_paths:
+  ethereum: build/vault.json
 dependencies: {}
 contracts: []
