--- a/packages/eightballer/agents/rysk_roller/aea-config.yaml
+++ b/packages/eightballer/agents/rysk_roller/aea-config.yaml
@@ -16,7 +16,7 @@ contracts:
 - valory/service_registry:0.1.0:bafybeiauproyi7qle35u777xnlajrz5samm7h2cdjdqxlsfkxbtwbqilzm
 - valory/uniswap_v2_erc20:0.1.0:bafybeigjlrw6gfzpap4pt57ibu26ebzk6grwfsbxp53i35f3kywau5hezi
 - valory/uniswap_v2_router_02:0.1.0:bafybeihjfeemghfrbqwxdfos5zulzi3fzvq3wjxpwmdu3di4rklljp3sry
-- zarathustra/homm_vault:0.1.0:bafybeif52woa2m7uigmhhuhlxoeyri2dhyfhwjbhvg6wqlykiqtjxn5jdq
+- zarathustra/homm_vault:0.1.0:bafybeiayvznp6nxv3cex6kcnfwqxg7fpqfa2u4zozuvusqw4bkbyc4rbji
 protocols:
 - open_aea/signing:1.0.0:bafybeibqlfmikg5hk4phzak6gqzhpkt6akckx7xppbp53mvwt6r73h7tk4
 - valory/abci:0.1.0:bafybeig3dj5jhsowlvg3t73kgobf6xn4nka7rkttakdb2gwsg5bp7rt7q4
@@ -27,7 +27,7 @@ protocols:
 - valory/ledger_api:1.0.0:bafybeibo4bdtcrxi2suyzldwoetjar6pqfzm6vt5xal22ravkkcvdmtksi
 - valory/tendermint:0.1.0:bafybeicusvezoqlmyt6iqomcbwaz3xkhk2qf3d56q5zprmj3xdxfy64k54
 skills:
-- eightballer/rysk_roller:0.1.0:bafybeig5szatwizbsifoddqszrupbxjwoy265jjlqxpjdgepij4cbqnm74
+- eightballer/rysk_roller:0.1.0:bafybeihinzpx3kgwxj46kfeqeccdr2b4a3amepg4wfl2u5nsj2mowbovqm
 - valory/abstract_abci:0.1.0:bafybeicujajnqzbndtndrndj53znohemihludifuyc5dazfbz6fltyj5ci
 - valory/abstract_round_abci:0.1.0:bafybeiar4gy4brpuxekiwjq7osh3fm254jgdoxlgkvqcp5lytu4uzrmbsm
 default_ledger: ethereum
@@ -99,3 +99,4 @@ models:
       tendermint_max_retries: 5
       tendermint_url: ${str:http://localhost:26657}
       use_termination: ${bool:false}
+      vault_address: ${str:0x0000000000000000000000000000000000000000}
