--- a/packages/eightballer/agents/rysk_roller/aea-config.yaml
+++ b/packages/eightballer/agents/rysk_roller/aea-config.yaml
@@ -15,7 +15,7 @@ connections:
 contracts:
 - valory/service_registry:0.1.0:bafybeibt3uhw7s72subuiqve2jd3mrd4vot7fh3jsdjd5d35wuiicaemv4
 - valory/uniswap_v2_erc20:0.1.0:bafybeic5dtudo4dulkmj6fqvv4fj3dmzam2pf3xsajlip5pafgbje3cone
-- zarathustra/homm_vault:0.1.0:bafybeiby63o3nlkgupdp6tq5r3hrwzw7hbnlf2yuwp3fr5vump6it4rece
+- zarathustra/homm_vault:0.1.0:bafybeif76n2vtdsxpeoxoa3raygx2rxkvq3cmvdlg5v7gajgrbhrxm5kz4
 protocols:
 - open_aea/signing:1.0.0:bafybeigqmouus33blg3ttpbtmy2tbhzyaefeyumxhfzxobpw43mocf7sru
 - valory/abci:0.1.0:bafybeih3jhbahoqi26tcqjommne2xxaxjslirbnidhhx5tit4gkvfuxaom
@@ -26,7 +26,7 @@ protocols:
 - valory/ledger_api:1.0.0:bafybeieoq3vtqst3hrbhxqchqkqd3hhbcf6rwgkz7zhnbupa6ecpgeesdi
 - valory/tendermint:0.1.0:bafybeib25ulpp3tri3ppexk4t6yttuajhr7wpgs7wajpsnbbnzo256ubem
 skills:
-- eightballer/rysk_roller:0.1.0:bafybeid7basixvtuav2ugozbsgdkcdxfgb4flho26lmt22oiq7z6vpdecm
+- eightballer/rysk_roller:0.1.0:bafybeia2v2qumlhyxbl4zpz7omzau7rapggqzouokvofecwluiyb7wqyie
 - valory/abstract_abci:0.1.0:bafybeia7z7grrixjkofv7z3o7wyxodquiqrlqpnhzlpbwbolcau5ht6gz4
 - valory/abstract_round_abci:0.1.0:bafybeiasqns6d3hyfjjjbygkcyqvogs34f2ykdwqh7zws7ic3aph47ojae
 default_ledger: ethereum
@@ -49,7 +49,8 @@ logging_config:
       level: INFO
       propagate: false
 dependencies:
-  open-aea-ledger-ethereum: {}
+  open-aea-ledger-ethereum-hwi: {}
+  rich: {}
 default_connection: null
 ---
 public_id: valory/abci:0.1.0
