[feat] checkpoint dockerised liquidation station

--- a/packages/eightballer/agents/liquidation_station/aea-config.yaml
+++ b/packages/eightballer/agents/liquidation_station/aea-config.yaml
@@ -42,6 +42,7 @@ logging_config:
   version: 1
 dependencies:
   open-aea-ledger-ethereum: {}
+  open-aea-ledger-ethereum-hwi: {}
 default_connection: null
 ---
 public_id: fetchai/http_server:0.22.0
