--- a/packages/eightballer/contracts/o_dai/contract.yaml
+++ b/packages/eightballer/contracts/o_dai/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeifzxvvj4dy426pibxzxjdbqqagsb7xavd5pxe6evg2decdgjsjhzq
+  build/o_dai.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeidgtach4j3r2whzuo4tfanss3arab4ex3kl6e55yonz3v5l5v2734
 fingerprint_ignore_patterns: []
 class_name: ODai
 contract_interface_paths:
