--- a/packages/eightballer/contracts/o_gdai/contract.yaml
+++ b/packages/eightballer/contracts/o_gdai/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeih4x7p5nxhskeccx2a2mcxvran5wlxm6tpi2nlp5nczk5s4saqqhu
+  build/o_gdai.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeicvwpksqbfcdu3nr4kogabyf6okobfk3c5uzqdv5ce5vrino5fooq
 fingerprint_ignore_patterns: []
 class_name: OGdai
 contract_interface_paths:
