--- a/packages/eightballer/contracts/o_mai/contract.yaml
+++ b/packages/eightballer/contracts/o_mai/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeibfxjl4yreafzo46wme5gd7cfd5vngoexbdgc6ylh5e42pdfxsepi
+  build/o_mai.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeifnifb56z6x2xpmdxrzazdcsugxdjg7s3pttuj3ufec3qpfkgsfsq
 fingerprint_ignore_patterns: []
 class_name: OMai
 contract_interface_paths:
