--- a/packages/eightballer/contracts/o_matic/contract.yaml
+++ b/packages/eightballer/contracts/o_matic/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeifcow737bt3zsasz3j7eclxelgyj2fl4fzrl5u5qwyvapfwqimrle
+  build/o_matic.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeie5pon4lwgfnyqxz5plhafv3kuznrdu4a67r3iq24ehuqcfepe2sm
 fingerprint_ignore_patterns: []
 class_name: OMatic
 contract_interface_paths:
