--- a/packages/eightballer/contracts/o_matic_logic/contract.yaml
+++ b/packages/eightballer/contracts/o_matic_logic/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeia7asbjvz5l27xakvbuuf2v4teh437umewfkntqlpkyuu3sxtew7e
+  build/o_matic_logic.json: bafybeibtibnv32kobveablexmdgp3yjt6hewvi5ic7aj6n5z3g5fdof3ze
+  contract.py: bafybeid2jholtklcqqtdvhozpbkth3kkcneqkzjor6l5dy7o3x5fldlw6q
 fingerprint_ignore_patterns: []
 class_name: OMaticLogic
 contract_interface_paths:
