--- a/packages/eightballer/contracts/o_token_logic/contract.yaml
+++ b/packages/eightballer/contracts/o_token_logic/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeifucm62sd3pz5xdpvtigk33cqb47rukfc22oxpeijsj22lehq3rre
+  build/o_token_logic.json: bafybeibtibnv32kobveablexmdgp3yjt6hewvi5ic7aj6n5z3g5fdof3ze
+  contract.py: bafybeic3hzu3y5jlp3wz3tsvby3i5sgt6sul5dydxz7rmez7ozw63ytg3i
 fingerprint_ignore_patterns: []
 class_name: OTokenLogic
 contract_interface_paths:
