--- a/packages/eightballer/contracts/o_usdc/contract.yaml
+++ b/packages/eightballer/contracts/o_usdc/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeibyuwbdbujoot5b5oiytyze5cyrurcedkvkbl42xgd5cxqbxmfg6a
+  build/o_usdc.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeicdkm5arh5ybymnovbexinet3csureeird7t6hje2ljic3fywgnhu
 fingerprint_ignore_patterns: []
 class_name: OUsdc
 contract_interface_paths:
