--- a/packages/eightballer/contracts/o_usdt/contract.yaml
+++ b/packages/eightballer/contracts/o_usdt/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeia4oqfqboiqei44usyvn45o6nahdwd5szdfhf64csca3exddrmkdy
+  build/o_usdt.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeicsmzjzwwz6fqj2lf622ueilqqg3gfkkogp7wxots7q5fwacidhpi
 fingerprint_ignore_patterns: []
 class_name: OUsdt
 contract_interface_paths:
