--- a/packages/eightballer/contracts/o_wbtc/contract.yaml
+++ b/packages/eightballer/contracts/o_wbtc/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeigsinvf35xj46zxobtrfxvbb5ubpo72ndogede7yigeannhlr2xui
+  build/o_wbtc.json: bafybeihodnrjquggmdlmjdshlrq2itkjc7qhfczkldwoalhrhw3ags2m7e
+  contract.py: bafybeie6gvospwywmwlwthjukrdivsfhhflez6jfnh4rpfkuitlok5fngi
 fingerprint_ignore_patterns: []
 class_name: OWbtc
 contract_interface_paths:
