--- a/packages/eightballer/contracts/ov_ghst/contract.yaml
+++ b/packages/eightballer/contracts/ov_ghst/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeifjvsgf3fqnwfpcxfv6c7hck7d7ltcaogj3wpoew7jpjqbii5d3iq
+  build/ov_ghst.json: bafybeifusg4cwajdbt6seo2prctd2iam2piyjiucbntwk3o4sy56xltlga
+  contract.py: bafybeihokx2st6ynynzayq7s4lbphuyapmjfxesflgi3qihh3gqj5bxnji
 fingerprint_ignore_patterns: []
 class_name: OvGhst
 contract_interface_paths:
