--- a/packages/eightballer/contracts/owst_eth/contract.yaml
+++ b/packages/eightballer/contracts/owst_eth/contract.yaml
@@ -6,8 +6,9 @@ description: The scaffold contract scaffolds a contract to be implemented by the
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
-  __init__.py: bafybeiddvydebdxub67dnzrzeva6ul4rknc2acnhwogpddvupl2gpb775y
-  contract.py: bafybeifixconyy55afy336t4btic7bv5z3tj7qsycfmbwrphvwbtmndxoi
+  __init__.py: bafybeielmpebencindgmcsjb37xnppgqyhvfblgpjxxeker6ucar6vjbgy
+  build/owst_eth.json: bafybeibtibnv32kobveablexmdgp3yjt6hewvi5ic7aj6n5z3g5fdof3ze
+  contract.py: bafybeigo4ejjuhg5orerzied2v5tqzs2qmkshnuv75erfeebrrrpodvepa
 fingerprint_ignore_patterns: []
 class_name: OwstEth
 contract_interface_paths:
