--- a/packages/eightballer/agents/liquidation_station/aea-config.yaml
+++ b/packages/eightballer/agents/liquidation_station/aea-config.yaml
@@ -2,7 +2,8 @@ agent_name: liquidation_station
 author: eightballer
 version: 0.1.0
 license: Apache-2.0
-description: 'The liquidation station was built in Eth Prague 2021. It allows for the liquidation of collateralized debt positions.'
+description: The liquidation station was built in Eth Prague 2021. It allows for the
+  liquidation of collateralized debt positions.
 aea_version: '>=1.32.0, <2.0.0'
 fingerprint: {}
 fingerprint_ignore_patterns: []
