--- a/packages/eightballer/skills/metrics/skill.yaml
+++ b/packages/eightballer/skills/metrics/skill.yaml
@@ -2,7 +2,7 @@ name: metrics
 author: eightballer
 version: 0.1.0
 type: skill
-description: The scaffold skill is a scaffold for your own skill implementation.
+description: The metrics skill allows the agent to responde to health metrics requests.
 license: Apache-2.0
 aea_version: '>=1.0.0, <2.0.0'
 fingerprint:
